--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,17 @@
 			<artifactId>mongo-java-driver</artifactId>
 			<version>3.7.1</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.17</version>
+		</dependency>
+		<dependency>
+			<groupId>io.github.cdimascio</groupId>
+			<artifactId>dotenv-java</artifactId>
+			<version>2.3.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
